--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -8,8 +8,8 @@ plugins {
 group 'com.salvadormontiel'
 version '0.0.0'
 
-targetCompatibility = JavaVersion.VERSION_14
-sourceCompatibility = JavaVersion.VERSION_14
+targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenCentral()
